--- a/mmcy Audit/mmcyAudit/dataManagement/templates/client_list.html
+++ b/mmcy Audit/mmcyAudit/dataManagement/templates/client_list.html
@@ -4,7 +4,9 @@
 
 
 <!-- Mirrored from spark.bootlab.io/pages-clients.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Nov 2022 20:32:12 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+<!-- /Added by HTTrack -->
 
 
 {% include 'head.html' %}
