--- a/mmcy Audit/mmcyAudit/dataManagement/templates/index.html
+++ b/mmcy Audit/mmcyAudit/dataManagement/templates/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include 'head.html' %}
+
 <body>
 	<div class="splash active">
 		<div class="splash-icon"></div>
@@ -118,7 +119,9 @@
 						</div>
 					</div>
 
-					{% comment %} <div class="row">
+
+
+					<div class="row">
 						<div class="col-12 col-md-6 col-xxl-4 d-flex">
 							<div class="card flex-fill w-100">
 								<div class="card-header">
@@ -141,7 +144,8 @@
 									<h5 class="card-title mb-0">Sales by State</h5>
 								</div>
 								<div class="card-body px-4">
-									<div id="usa_map" style="height:294px;"></div>
+									<div id="chart-container"  style="height:294px;"></div>
+								
 								</div>
 							</div>
 						</div>
@@ -168,15 +172,19 @@
 								</div>
 								<div class="card-body py-3">
 									<div class="chart chart-md">
-										<canvas id="chartjs-dashboard-line"></canvas>
+
+										<div id="container-bar"  style="height:294px;"></div>
+										
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 
+
 					<div class="row">
-						<div class="col-12 col-lg-8 d-flex">
+
+						<div class="col-12 col-lg-12 col-xxl-12 d-flex">
 							<div class="card flex-fill">
 								<div class="card-header">
 									<div class="card-actions float-end">
@@ -195,117 +203,85 @@
 											</div>
 										</div>
 									</div>
-									<h5 class="card-title mb-0">Top Selling Products</h5>
+									<h5 class="card-title mb-0">Latest Audits</h5>
 								</div>
-								<table id="datatables-dashboard-products" class="table table-striped my-0">
+								<table id="datatables-dashboard-projects" class="table table-striped my-0">
 									<thead>
 										<tr>
 											<th>Name</th>
-											<th class="d-none d-xl-table-cell">License</th>
-											<th class="d-none d-xl-table-cell">Technology</th>
-											<th class="d-none d-xl-table-cell">Tickets</th>
-											<th>Sales</th>
+											<th>Audit Date</th>
+											<th>Project</th>
+											
+											<th>Criterion</th>
 										</tr>
 									</thead>
 									<tbody>
+
+
+										{% for data  in audits_data  %}
+										
 										<tr>
-											<td>AppStack</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-success">HTML</span></td>
-											<td class="d-none d-xl-table-cell">50</td>
-											<td class="d-none d-xl-table-cell">720</td>
+											<td>{{data.auditives}}</td>
+											<td>{{data.date}}</td>
+											<td>{{data.project}}</td>
+
+											{% if data.notice == True %}
+											<td><span class="badge bg-danger">{{data.criterion}}</span></td>
+											{% else %}
+											<td><span class="badge bg-success">{{data.criterion}}</span></td>
+											{% endif %}
+										
+									
 										</tr>
-										<tr>
-											<td>Spark</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-danger">Angular</span></td>
-											<td class="d-none d-xl-table-cell">20</td>
-											<td class="d-none d-xl-table-cell">540</td>
-										</tr>
-										<tr>
-											<td>Milo</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-warning">React</span></td>
-											<td class="d-none d-xl-table-cell">40</td>
-											<td class="d-none d-xl-table-cell">280</td>
-										</tr>
-										<tr>
-											<td>Ada</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-info">Vue</span></td>
-											<td class="d-none d-xl-table-cell">60</td>
-											<td class="d-none d-xl-table-cell">610</td>
-										</tr>
-										<tr>
-											<td>Abel</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-danger">Angular</span></td>
-											<td class="d-none d-xl-table-cell">80</td>
-											<td class="d-none d-xl-table-cell">150</td>
-										</tr>
-										<tr>
-											<td>Spark</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-success">HTML</span></td>
-											<td class="d-none d-xl-table-cell">20</td>
-											<td class="d-none d-xl-table-cell">480</td>
-										</tr>
-										<tr>
-											<td>Libre</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-warning">React</span></td>
-											<td class="d-none d-xl-table-cell">30</td>
-											<td class="d-none d-xl-table-cell">280</td>
-										</tr>
-										<tr>
-											<td>Von</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-danger">Angular</span></td>
-											<td class="d-none d-xl-table-cell">50</td>
-											<td class="d-none d-xl-table-cell">350</td>
-										</tr>
-										<tr>
-											<td>Material Blog</td>
-											<td class="d-none d-xl-table-cell">Single license</td>
-											<td><span class="badge bg-info">Vue</span></td>
-											<td class="d-none d-xl-table-cell">10</td>
-											<td class="d-none d-xl-table-cell">480</td>
-										</tr>
+
+
+										{% endfor %}
+
+									
+										
+								
+										
 									</tbody>
 								</table>
 							</div>
 						</div>
-						<div class="col-12 col-lg-4 d-flex">
-							<div class="card flex-fill w-100">
-								<div class="card-header">
-									<div class="card-actions float-end">
-										<a href="#" class="me-1">
-											<i class="align-middle" data-feather="refresh-cw"></i>
-										</a>
-										<div class="d-inline-block dropdown show">
-											<a href="#" data-bs-toggle="dropdown" data-bs-display="static">
-												<i class="align-middle" data-feather="more-vertical"></i>
-											</a>
-
-											<div class="dropdown-menu dropdown-menu-end">
-												<a class="dropdown-item" href="#">Action</a>
-												<a class="dropdown-item" href="#">Another action</a>
-												<a class="dropdown-item" href="#">Something else here</a>
-											</div>
-										</div>
-									</div>
-									<h5 class="card-title mb-0">Sales / Revenue</h5>
-								</div>
-								<div class="card-body d-flex w-100">
-									<div class="align-self-center chart chart-lg">
-										<canvas id="chartjs-dashboard-bar-alt"></canvas>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div> {% endcomment %}
-
+					
+					</div>
 				</div>
+
+
+
+							{% block content %}
+							<div id="container"></div>
+
+								<script src="https://code.highcharts.com/highcharts.js"></script>
+								<script src="https://code.highcharts.com/modules/series-label.js"></script>
+								<script src="https://code.highcharts.com/modules/heatmap.js"></script>
+								<script src="https://code.highcharts.com/modules/treemap.js"></script>
+
+							<script>
+							Highcharts.chart('container', {
+							    chart: {
+							        height: '50%'
+							    },
+							    title: {
+							        text: 'Account Manager Audits per Auditive'
+							    },
+							    series: [{
+							        type: 'treemap',
+							        layoutAlgorithm: 'squarified',
+							        data: {{ data|safe }}
+							    }]
+							});
+							</script>
+							{% endblock %}
+
+
+							
+					</div>
+
+
+					</div>
 			</main>
 			<footer class="footer">
 				<div class="container-fluid">
@@ -346,7 +322,78 @@
 			</symbol>
 		</defs>
 	</svg>
+
+
+
+	
+	<script src="https://code.highcharts.com/highcharts.js"></script>
+
+	<script>
+	
+	document.addEventListener("DOMContentLoaded", function() {
+		Highcharts.chart('container-bar', {
+			chart: {
+				 type: 'bar'
+			},
+			title: {
+				 text: 'Account Managers Audits per Project'
+			},
+			xAxis: {
+				 categories: {{ project_names|safe }},
+				 title: {
+					  text: 'Project Name'
+				 }
+			},
+			yAxis: {
+				 min: 0,
+				 title: {
+					  text: 'Number of Audits'
+				 }
+			},
+			legend: {
+				 enabled: false
+			},
+			series: [{
+				 name: 'Audits',
+				 data: {{ project_counts|safe }}
+			}]
+	  });
+});
+
+
+	</script>
+
+	
+		 <script>
+			document.addEventListener("DOMContentLoaded", function() {
+			const data = {{ chart_data|safe }};
+			// Create the pie chart using HighCharts
+			Highcharts.chart('chart-container', {
+			  chart: {
+				 type: 'pie'
+			  },
+			  title: {
+				 text: 'Number of Total Audits'
+			  },
+			  series: [{
+				 name: 'Notice',
+				 data: data
+			  }]
+			});
+
+		});
+		 </script>
+
+
+		
+	  </body>
+	</html>
+	
+
 	<script src="{% static 'js/app.js' %}"></script>
+	
+	
+
 
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
